--- a/framework/src/main/resources/application.yml
+++ b/framework/src/main/resources/application.yml
@@ -3,20 +3,22 @@ server:
 
 spring:
   datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://127.0.0.1:3306/yunke
     username: root
     password: 123456
-    driver-class-name: com.mysql.cj.jdbc.Driver
+    type: com.alibaba.druid.pool.DruidDataSource
 
 mybatis:
+  # 对于boolean类型的字段，数据库存储为is_XXX，java实体类均为xxx。必须使用resultMap进行映射
   # 配置xml文件路径
   mapper-locations: classpath*:/mapper/*.xml
   # 配置实体类包名
-  type-aliases-package: com.yunke.framework.common.module.entity
+  type-aliases-package: com.yunke.common.module.entity
   # 配置类型处理器所在包
-  type-handlers-package: com.yunke.config.ibatis.type
+  # type-handlers-package: com.yunke.config.ibatis.type
   configuration:
     # 是否开启自动驼峰命名规则（camel case）映射，即从经典数据库列名 A_COLUMN（下划线命名） 到经典 Java 属性名 aColumn（驼峰命名） 的类似映射
-    map-underscore-to-camel-case: false
+    map-underscore-to-camel-case: true
     # 这个配置会将执行的sql打印出来，在开发或测试的时候可以用
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
